updating global config in anticipation of real data

--- a/global_config.ini
+++ b/global_config.ini
@@ -5,34 +5,43 @@ WATERSHEDS = https://storage.googleapis.com/ecoshard-root/key_datasets/watershed
 GLOBAL_BB = [-179.9, -60, 179.9, 60]
 GLOBAL_PIXEL_SIZE_DEG = 0.0027777777777778
 THRESHOLD_FLOW_ACCUMULATION = 1000
+ALPHA_M = 0.083333
+BETA_I = 1
+GAMMA = 1
+
+[wwf_ph_baseline]
+PRECIP_DIR = ./precip
+ET0_DIR = ./et0
+EVAPOTRANSPIRATION_RASTER = ./evto.tif
+LULC_RASTER = ./lulc.tif
+BIOPHYSICAL_TABLE = ./biophysical.csv
+SOIL_HYDROLOGIC_GROUP_RASTER = ./soil_group.tif
+SOIL_HYDROLOGIC_MAP = {
+    1: 'A',
+    2: 'B',
+    3: 'C',
+    4: 'D',
+    11: 'A',
+    12: 'B',
+    13: 'C',
+    14: 'D'}
+CLIMATE_ZONES_RASTER = ./zones.tif
+
 
 [expected_keys]
-TARGET_PIXEL_SIZE_M
-GLOBAL_BB
-K_PARAM
-LULC
+PRECIP_DIR
+ET0_DIR
+EVAPOTRANSPIRATION_RASTER
+LULC_RASTER
 BIOPHYSICAL_TABLE
-BIOPHYSICAL_TABLE_LUCODE_COLUMN_ID
-DEM
-WATERSHEDS
-
-[ndr_expected_keys]
-FERTILIZER
-RUNOFF_PROXY
-
-[sdr_expected_keys]
-EROSIVITY
-ERODIBILITY
-L_CAP
-SDR_MAX
-IC_0_PARAM
+SOIL_HYDROLOGIC_GROUP_RASTER
+SOIL_HYDROLOGIC_MAP
+CLIMATE_ZONES_RASTER
 
 [files]
-LULC
+PRECIP_DIR
+ET0_DIR
+EVAPOTRANSPIRATION_RASTER
+LULC_RASTER
 BIOPHYSICAL_TABLE
-FERTILIZER
-EROSIVITY
-ERODIBILITY
-RUNOFF_PROXY
-DEM
-WATERSHEDS
+SOIL_HYDROLOGIC_GROUP_RASTER
