filling out the ini file

--- a/wwf_ph_baseline.ini
+++ b/wwf_ph_baseline.ini
@@ -15,22 +15,13 @@ SOIL_HYDROLOGIC_MAP = {
     13: 'C',
     14: 'D'}
 CLIMATE_ZONES_RASTER = ./zones.tif
-
-args['aoi_path']
-args['climate_zone_raster_path']
-args['climate_zone_table_path']
-args['dem_raster_path']
-args['et0_dir']
-args['l_path']
-args['lulc_raster_path']
-args['monthly_alpha']
-args['monthly_alpha_path']
-args['n_workers']
-args['precip_dir']
-args['rain_events_table_path']
-args['results_suffix']
-args['soil_group_path']
-args['threshold_flow_accumulation']
-args['user_defined_climate_zones']
-args['user_defined_local_recharge']
-
+AOI_VECTOR = ./aoi.gpkg
+CLIMATE_ZONE_RASTER=./climate_zone.tif
+CLIMATE_ZONE_TABLE=./climate_zone_table.csv
+DEM_RASTER_PATH=./dem.tif
+L_PATH=./l.tif
+MONTHLY_ALPHA=0.018
+MONTHLY_ALPHA_PATH=./alpha.tif
+RAIN_EVENTS_TABLE_PATH=
+SOIL_GROUP_PATH=
+THRESHOLD_FLOW_ACCUMULATION=1000
