refactoring to use ET0 directories

--- a/swy_global.ini
+++ b/swy_global.ini
@@ -1,7 +1,7 @@
 [DEFAULT]
 WORKSPACE_DIR = workspace
-DEM = https://storage.googleapis.com/ecoshard-root/key_datasets/global_dem_3s_md5_22d0c3809af491fa09d03002bdf09748.zip
-WATERSHEDS = https://storage.googleapis.com/ecoshard-root/key_datasets/watersheds_globe_HydroSHEDS_15arcseconds_md5_c6acf2762123bbd5de605358e733a304.zip
+DEM_RASTER = D:\repositories\downstream-beneficiaries\workspace\global_dem_3s_md5_22d0c3809af491fa09d03002bdf09748\global_dem_3s\global_dem_3s_md5_22d0c3809af491fa09d03002bdf09748.vrt
+WATERSHEDS = D:\repositories\swy_global\base_data\watersheds_globe_HydroSHEDS_15arcseconds\
 GLOBAL_BB = [-179.9, -60, 179.9, 60]
 GLOBAL_PIXEL_SIZE_DEG = 0.0027777777777778
 THRESHOLD_FLOW_ACCUMULATION = 1000
@@ -12,17 +12,17 @@ GAMMA = 1
 [expected_keys]
 PRECIP_DIR
 ET0_DIR
-EVAPOTRANSPIRATION_RASTER
 LULC_RASTER
 BIOPHYSICAL_TABLE
 SOIL_HYDROLOGIC_GROUP_RASTER
 SOIL_HYDROLOGIC_MAP
-CLIMATE_ZONES_RASTER
+AOI_VECTOR
+MONTHLY_ALPHA
 
 [files]
 PRECIP_DIR
 ET0_DIR
-EVAPOTRANSPIRATION_RASTER
 LULC_RASTER
-BIOPHYSICAL_TABLE
 SOIL_HYDROLOGIC_GROUP_RASTER
+RAIN_EVENTS_TABLE
+DEM_RASTER
