--- a/wwf_ph_baseline.ini
+++ b/wwf_ph_baseline.ini
@@ -1,10 +1,8 @@
 [wwf_ph_baseline]
-PRECIP_DIR = ./precip
-ET0_DIR = ./et0
-EVAPOTRANSPIRATION_RASTER = ./evto.tif
-LULC_RASTER = ./lulc.tif
-BIOPHYSICAL_TABLE = ./biophysical.csv
-SOIL_HYDROLOGIC_GROUP_RASTER = ./soil_group.tif
+PRECIP_DIR = "D:\repositories\wwf-sipa\data\SWY\precip_2010-2018_average"
+ET0_DIR = "D:\repositories\wwf-sipa\data\SWY\Global-ET0_v3_monthly_tifs"
+LULC_RASTER = "D:\repositories\wwf-sipa\data\Palawan_lulc_compressed_md5_35c340.tif"
+SOIL_HYDROLOGIC_GROUP_RASTER = "D:\repositories\wwf-sipa\data\SWY\HYSOGs250m_md5_517bfa.tif"
 SOIL_HYDROLOGIC_MAP = {
     1: 'A',
     2: 'B',
@@ -14,14 +12,11 @@ SOIL_HYDROLOGIC_MAP = {
     12: 'B',
     13: 'C',
     14: 'D'}
-CLIMATE_ZONES_RASTER = ./zones.tif
-AOI_VECTOR = ./aoi.gpkg
-CLIMATE_ZONE_RASTER=./climate_zone.tif
-CLIMATE_ZONE_TABLE=./climate_zone_table.csv
-DEM_RASTER_PATH=./dem.tif
-L_PATH=./l.tif
+RAIN_EVENTS_TABLE="D:\repositories\wwf-sipa\data\SWY\all_10_rain_events_table.csv"
 MONTHLY_ALPHA=0.018
-MONTHLY_ALPHA_PATH=./alpha.tif
-RAIN_EVENTS_TABLE_PATH=
-SOIL_GROUP_PATH=
 THRESHOLD_FLOW_ACCUMULATION=1000
+WATERSHED_SUBSET = {'af_bas_15s_beta': [19039, 23576, 18994]}
+AOI_VECTOR = "D:\repositories\wwf-sipa\data\SWY\palawan_test_aoi.gpkg"
+
+
+BIOPHYSICAL_TABLE = ./biophysical.csv ???????????
