refactoring to use the same variable names as the INI

--- a/swy_global.ini
+++ b/swy_global.ini
@@ -1,28 +1,20 @@
 [DEFAULT]
 WORKSPACE_DIR = workspace
-DEM_RASTER = D:\repositories\downstream-beneficiaries\workspace\global_dem_3s_md5_22d0c3809af491fa09d03002bdf09748\global_dem_3s\global_dem_3s_md5_22d0c3809af491fa09d03002bdf09748.vrt
-WATERSHEDS = D:\repositories\swy_global\base_data\watersheds_globe_HydroSHEDS_15arcseconds\
+DEM_RASTER_PATH = D:\repositories\downstream-beneficiaries\workspace\global_dem_3s_md5_22d0c3809af491fa09d03002bdf09748\global_dem_3s\global_dem_3s_md5_22d0c3809af491fa09d03002bdf09748.vrt
+WATERSHEDS_VECTOR_PATH = D:\repositories\swy_global\base_data\watersheds_globe_HydroSHEDS_15arcseconds\
 GLOBAL_BB = [-179.9, -60, 179.9, 60]
 GLOBAL_PIXEL_SIZE_DEG = 0.0027777777777778
 THRESHOLD_FLOW_ACCUMULATION = 1000
 ALPHA_M = 0.083333
 BETA_I = 1
 GAMMA = 1
+RESULTS_SUFFIX =
 
 [expected_keys]
 PRECIP_DIR
 ET0_DIR
-LULC_RASTER
-BIOPHYSICAL_TABLE
-SOIL_HYDROLOGIC_GROUP_RASTER
+LULC_RASTER_PATH
+BIOPHYSICAL_TABLE_PATH
+SOIL_HYDROLOGIC_GROUP_RASTER_PATH
 SOIL_HYDROLOGIC_MAP
-AOI_VECTOR
 MONTHLY_ALPHA
-
-[files]
-PRECIP_DIR
-ET0_DIR
-LULC_RASTER
-SOIL_HYDROLOGIC_GROUP_RASTER
-RAIN_EVENTS_TABLE
-DEM_RASTER
