--- a/wwf_ph_baseline.ini
+++ b/wwf_ph_baseline.ini
@@ -15,5 +15,5 @@ SOIL_HYDROLOGIC_MAP = {
 RAIN_EVENTS_TABLE_PATH = D:\repositories\wwf-sipa\data\SWY\all_10_rain_events_table.csv
 MONTHLY_ALPHA = 0.018
 THRESHOLD_FLOW_ACCUMULATION = 1000
-WATERSHED_SUBSET = {'af_bas_15s_beta': [19039, 23576, 18994]}
+WATERSHED_SUBSET = ('af_bas_15s_beta', 'BASIN_ID', (22216, 20264))
 BIOPHYSICAL_TABLE_PATH = D:\repositories\wwf-sipa\data\SWY\biophysical_template.csv
