--- a/wwf_ph_baseline.ini
+++ b/wwf_ph_baseline.ini
@@ -16,4 +16,5 @@ RAIN_EVENTS_TABLE_PATH = D:\repositories\wwf-sipa\data\SWY\all_10_rain_events_ta
 MONTHLY_ALPHA = 0.018
 THRESHOLD_FLOW_ACCUMULATION = 1000
 WATERSHED_SUBSET = ('af_bas_15s_beta', 'BASIN_ID', (22216, 20264))
-BIOPHYSICAL_TABLE_PATH = D:\repositories\wwf-sipa\data\SWY\biophysical_template.csv
+BIOPHYSICAL_TABLE_PATH = ./base_data/biophysical_template_PH.csv
+LUCODE_FIELD = lulc_id
