making subset go to local dir and cleaning up extra dirs

--- a/swy_global.ini
+++ b/swy_global.ini
@@ -1,5 +1,4 @@
 [DEFAULT]
-WORKSPACE_DIR = workspace
 DEM_RASTER_PATH = D:\repositories\downstream-beneficiaries\workspace\global_dem_3s_md5_22d0c3809af491fa09d03002bdf09748\global_dem_3s\global_dem_3s_md5_22d0c3809af491fa09d03002bdf09748.vrt
 WATERSHEDS_VECTOR_PATH = D:\repositories\swy_global\base_data\watersheds_globe_HydroSHEDS_15arcseconds\
 GLOBAL_BB = [-179.9, -60, 179.9, 60]
@@ -18,3 +17,4 @@ BIOPHYSICAL_TABLE_PATH
 SOIL_HYDROLOGIC_GROUP_RASTER_PATH
 SOIL_HYDROLOGIC_MAP
 MONTHLY_ALPHA
+TARGET_PIXEL_SIZE
