refactor to use collapsing boudning box

--- a/wwf_ph_baseline.ini
+++ b/wwf_ph_baseline.ini
@@ -1,7 +1,8 @@
 [wwf_ph_baseline]
 PRECIP_DIR = D:\repositories\wwf-sipa\data\SWY\precip_2010-2018_average
 ET0_DIR = D:\repositories\wwf-sipa\data\SWY\Global-ET0_v3_monthly_tifs
-LULC_RASTER_PATH = D:\repositories\wwf-sipa\data\Palawan_lulc_compressed_md5_35c340.tif
+LULC_RASTER_PATH = D:\repositories\wwf-sipa\data\landcover_rasters\ph_baseline_lulc_md5_7f29da.tif
+
 SOIL_HYDROLOGIC_GROUP_RASTER_PATH = D:\repositories\wwf-sipa\data\SWY\HYSOGs250m_md5_517bfa.tif
 SOIL_HYDROLOGIC_MAP = {
     1: 'A',
@@ -15,7 +16,8 @@ SOIL_HYDROLOGIC_MAP = {
 RAIN_EVENTS_TABLE_PATH = D:\repositories\wwf-sipa\data\SWY\all_10_rain_events_table.csv
 MONTHLY_ALPHA = 0.018
 THRESHOLD_FLOW_ACCUMULATION = 1000
-WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', (392252, 390065))
+#WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', (392252, 390065))
+WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', (392252,))
 BIOPHYSICAL_TABLE_PATH = ./base_data/biophysical_template_PH.csv
 LUCODE_FIELD = lulc_id
 TARGET_PIXEL_SIZE = 300
