update to local bigboi paths

--- a/swy_global.ini
+++ b/swy_global.ini
@@ -1,6 +1,6 @@
 [DEFAULT]
-DEM_RASTER_PATH = D:\repositories\downstream-beneficiaries\workspace\global_dem_3s_md5_22d0c3809af491fa09d03002bdf09748\global_dem_3s\global_dem_3s_md5_22d0c3809af491fa09d03002bdf09748.vrt
-WATERSHEDS_VECTOR_PATH = D:\repositories\swy_global\base_data\watersheds_globe_HydroSHEDS_15arcseconds\
+DEM_RASTER_PATH = D:\local_global_swy_data\global_dem_3s_md5_22d0c3809af491fa09d03002bdf09748\dem.vrt
+WATERSHEDS_VECTOR_PATH = D:\local_global_swy_data\watersheds_globe_HydroSHEDS_15arcseconds\
 GLOBAL_BB = [-179.9, -60, 179.9, 60]
 GLOBAL_PIXEL_SIZE_DEG = 0.0027777777777778
 THRESHOLD_FLOW_ACCUMULATION = 1000
