--- a/wwf_ph_baseline.ini
+++ b/wwf_ph_baseline.ini
@@ -16,7 +16,7 @@ SOIL_HYDROLOGIC_MAP = {
 RAIN_EVENTS_TABLE_PATH = D:\repositories\swy_global\base_data\all_10_rain_events_table.csv
 MONTHLY_ALPHA = 0.018
 THRESHOLD_FLOW_ACCUMULATION = 1000
-WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', (392252, 390065))
+# WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', (392252, 390065))
 BIOPHYSICAL_TABLE_PATH = ./base_data/biophysical_template_PH.csv
 LUCODE_FIELD = lulc_id
-TARGET_PIXEL_SIZE = 300
+TARGET_PIXEL_SIZE = 30
