fixing issue where the workspace path wouldn't clean up because there were intermediate components

--- a/wwf_ph_baseline.ini
+++ b/wwf_ph_baseline.ini
@@ -1,4 +1,5 @@
 [wwf_ph_baseline]
+N_WORKERS=1
 PRECIP_DIR = D:\local_global_swy_data\precip_2010-2018_average
 ET0_DIR = D:\local_global_swy_data\Global-ET0_v3_monthly_tifs
 LULC_RASTER_PATH = D:\repositories\wwf-sipa\data\landcover_rasters\ph_baseline_lulc_md5_7f29da.tif
@@ -16,7 +17,7 @@ SOIL_HYDROLOGIC_MAP = {
 RAIN_EVENTS_TABLE_PATH = D:\repositories\swy_global\base_data\all_10_rain_events_table.csv
 MONTHLY_ALPHA = 0.018
 THRESHOLD_FLOW_ACCUMULATION = 1000
-# WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', (392252, 390065))
+WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', (392252, 390065))
 BIOPHYSICAL_TABLE_PATH = ./base_data/biophysical_template_PH.csv
 LUCODE_FIELD = lulc_id
 TARGET_PIXEL_SIZE = 30
