adding user defined rain events

--- a/swy_global.ini
+++ b/swy_global.ini
@@ -8,6 +8,9 @@ ALPHA_M = 0.083333
 BETA_I = 1
 GAMMA = 1
 RESULTS_SUFFIX =
+RAIN_EVENTS_TABLE_PATH =
+USER_DEFINED_RAIN_EVENTS_PATH =
+
 
 [expected_keys]
 PRECIP_DIR
