--- a/wwf_ph_baseline.ini
+++ b/wwf_ph_baseline.ini
@@ -15,10 +15,10 @@ SOIL_HYDROLOGIC_MAP = {
     14: 'D'}
 
 ;RAIN_EVENTS_TABLE_PATH = ./base_data\all_10_rain_events_table.csv
-USER_DEFINED_RAIN_EVENTS_PATH = ./*.tif
+USER_DEFINED_RAIN_EVENTS_PATH = ./ph_box_CHIRPS_avg_precip_events_2000_2010_*_1.0.tif
 MONTHLY_ALPHA = 0.018
 THRESHOLD_FLOW_ACCUMULATION = 1000
-; WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', (392252, 390065))
+WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', (392252, 390065))
 BIOPHYSICAL_TABLE_PATH = ./base_data/biophysical_template_PH.csv
 LUCODE_FIELD = lulc_id
 TARGET_PIXEL_SIZE = 30
