multi just for debug

--- a/wwf_ph_baseline_chirps_single.ini
+++ b/wwf_ph_baseline_chirps_single.ini
@@ -17,8 +17,9 @@ SOIL_HYDROLOGIC_MAP = {
 USER_DEFINED_RAIN_EVENTS_PATH = ./ph_box_CHIRPS_avg_precip_events_2000_2010_*_1.0.tif
 MONTHLY_ALPHA = 0.018
 THRESHOLD_FLOW_ACCUMULATION = 1000
-;WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', (392252, 390065))
-WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', 32650)
+WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', (392252, 390065))
+;WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', 392252)
+;WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', 32650)
 BIOPHYSICAL_TABLE_PATH = ./base_data/biophysical_template_PH.csv
 LUCODE_FIELD = lulc_id
 TARGET_PIXEL_SIZE = 30
