adding a max pixel gd

--- a/swy_global.ini
+++ b/swy_global.ini
@@ -7,6 +7,7 @@ THRESHOLD_FLOW_ACCUMULATION = 1000
 ALPHA_M = 0.083333
 BETA_I = 1
 GAMMA = 1
+MAX_PIXEL_FILL_COUNT = 1000
 RESULTS_SUFFIX =
 RAIN_EVENTS_TABLE_PATH =
 USER_DEFINED_RAIN_EVENTS_PATH =
