--- a/swy_global.ini
+++ b/swy_global.ini
@@ -8,6 +8,7 @@ ALPHA_M = 0.083333
 BETA_I = 1
 GAMMA = 1
 MAX_PIXEL_FILL_COUNT = 1000000
+ALL_TOUCHED = FALSE
 RESULTS_SUFFIX =
 RAIN_EVENTS_TABLE_PATH =
 USER_DEFINED_RAIN_EVENTS_PATH =
