fixing all touched and getting IDN right

--- a/wwf_IDN_baseline_chirps.ini
+++ b/wwf_IDN_baseline_chirps.ini
@@ -1,8 +1,8 @@
-[wwf_ind_baseline_chirps_water_is_22_all_touched_true]
+[wwf_IDN_baseline_chirps]
 ; N_WORKERS=1
 PRECIP_DIR = D:\local_global_swy_data\precip_2010-2018_average
 ET0_DIR = D:\local_global_swy_data\Global-ET0_v3_monthly_tifs
-LULC_RASTER_PATH = D:\repositories\wwf-sipa\data\landcover_rasters\ind_baseline_lulc_nodatato22.tif
+LULC_RASTER_PATH = D:\repositories\wwf-sipa\data\landcover_rasters\idn_baseline_LULC_all_lulc_nodata_to_22_compressed_md5_bd2bff.tif
 SOIL_HYDROLOGIC_GROUP_RASTER_PATH = D:\local_global_swy_data\HYSOGs250m_md5_517bfa.tif
 SOIL_HYDROLOGIC_MAP = {
     1: 'A',
@@ -22,4 +22,3 @@ THRESHOLD_FLOW_ACCUMULATION = 100000
 BIOPHYSICAL_TABLE_PATH = D:/repositories/wwf-sipa/data/biophysical_template_IDN_simple.csv
 LUCODE_FIELD = lulc_id
 TARGET_PIXEL_SIZE = 30
-ALL_TOUCHED = TRUE
