--- a/wwf_IDN_baseline_chirps_all_touched.ini
+++ b/wwf_IDN_baseline_chirps_all_touched.ini
@@ -1,9 +1,8 @@
-[wwf_ind_debug_qf]
+[wwf_IDN_baseline_chirps_all_touched]
 ; N_WORKERS=1
-DEM_RASTER_PATH = D:\repositories\wwf-sipa\data\aster_dem\aster_dem.vrt
 PRECIP_DIR = D:\local_global_swy_data\precip_2010-2018_average
 ET0_DIR = D:\local_global_swy_data\Global-ET0_v3_monthly_tifs
-LULC_RASTER_PATH = D:\repositories\wwf-sipa\data\landcover_rasters\LULC_all_lulc.tif
+LULC_RASTER_PATH = D:\repositories\wwf-sipa\data\landcover_rasters\idn_baseline_LULC_all_lulc_nodata_to_22_compressed_md5_bd2bff.tif
 SOIL_HYDROLOGIC_GROUP_RASTER_PATH = D:\local_global_swy_data\HYSOGs250m_md5_517bfa.tif
 SOIL_HYDROLOGIC_MAP = {
     1: 'A',
@@ -17,8 +16,10 @@ SOIL_HYDROLOGIC_MAP = {
 
 USER_DEFINED_RAIN_EVENTS_PATH = ./ind_aoi_CHIRPS_avg_precip_events_2000_2011_*_1.0.tif
 MONTHLY_ALPHA = 0.018
-THRESHOLD_FLOW_ACCUMULATION = 1000
-WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', 615414)
+THRESHOLD_FLOW_ACCUMULATION = 100000
+;WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', (392252, 390065))
+;WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', 32650)
 BIOPHYSICAL_TABLE_PATH = D:/repositories/wwf-sipa/data/biophysical_template_IDN_simple.csv
 LUCODE_FIELD = lulc_id
 TARGET_PIXEL_SIZE = 30
+ALL_TOUCHED = TRUE
