update to use global pizel size of 0.0002 and use the future csv with the future scenario

--- a/wwf_IDN_baseline_chirps_all_touched.ini
+++ b/wwf_IDN_baseline_chirps_all_touched.ini
@@ -23,3 +23,4 @@ BIOPHYSICAL_TABLE_PATH = D:/repositories/wwf-sipa/data/biophysical_template_IDN_
 LUCODE_FIELD = lulc_id
 TARGET_PIXEL_SIZE = 30
 ALL_TOUCHED = TRUE
+GLOBAL_PIXEL_SIZE_DEG = 0.00027777777777778
