--- a/wwf_IDN_infra_impact_gradient.ini
+++ b/wwf_IDN_infra_impact_gradient.ini
@@ -19,7 +19,8 @@ MONTHLY_ALPHA = 0.018
 THRESHOLD_FLOW_ACCUMULATION = 100000
 ;WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', (392252, 390065))
 ;WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', 32650)
-BIOPHYSICAL_TABLE_PATH = D:/repositories/wwf-sipa/data/biophysical_template_IDN_simple.csv
+BIOPHYSICAL_TABLE_PATH = D:/repositories/wwf-sipa/data/biophysical_template_IDN_infra_impacts.csv
 LUCODE_FIELD = lulc_id
 TARGET_PIXEL_SIZE = 30
 ALL_TOUCHED = TRUE
+GLOBAL_PIXEL_SIZE_DEG = 0.00027777777777778
