make it the right tag in the pass to the model

--- a/wwf_ph_baseline_chirps_single.ini
+++ b/wwf_ph_baseline_chirps_single.ini
@@ -21,5 +21,5 @@ WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', (392252, 390065))
 ;WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', 392252)
 ;WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', 32650)
 BIOPHYSICAL_TABLE_PATH = ./base_data/biophysical_template_PH.csv
-BIOPHYSICAL_TABLE_LUCODE_FIELD = lulc_id
+LUCODE_FIELD = lulc_id
 TARGET_PIXEL_SIZE = 30
