refator to use user defined data

--- a/swy_global.ini
+++ b/swy_global.ini
@@ -12,13 +12,29 @@ ALL_TOUCHED = FALSE
 RESULTS_SUFFIX =
 RAIN_EVENTS_TABLE_PATH =
 USER_DEFINED_RAIN_EVENTS_PATH =
-
+ROOT_DEPTH_PATH =
+CN_A_PATH =
+CN_B_PATH =
+CN_C_PATH =
+CN_D_PATH =
+KC_1_PATH =
+KC_2_PATH =
+KC_3_PATH =
+KC_4_PATH =
+KC_5_PATH =
+KC_6_PATH =
+KC_7_PATH =
+KC_8_PATH =
+KC_9_PATH =
+KC_10_PATH =
+KC_11_PATH =
+KC_12_PATH =
+LULC_RASTER_PATH =
+BIOPHYSICAL_TABLE_PATH =
 
 [expected_keys]
 PRECIP_DIR
 ET0_DIR
-LULC_RASTER_PATH
-BIOPHYSICAL_TABLE_PATH
 SOIL_HYDROLOGIC_GROUP_RASTER_PATH
 SOIL_HYDROLOGIC_MAP
 MONTHLY_ALPHA
