track that we're casfolding

--- a/wwf_ph_baseline.ini
+++ b/wwf_ph_baseline.ini
@@ -22,3 +22,4 @@ WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', (392252, 390065))
 BIOPHYSICAL_TABLE_PATH = ./base_data/biophysical_template_PH.csv
 LUCODE_FIELD = lulc_id
 TARGET_PIXEL_SIZE = 30
+GLOBAL_PIXEL_SIZE_DEG = 0.0027777777777778
