update with correct CN paths

--- a/wwf_ph_baseline_contCN.ini
+++ b/wwf_ph_baseline_contCN.ini
@@ -20,10 +20,15 @@ THRESHOLD_FLOW_ACCUMULATION = 1000
 TARGET_PIXEL_SIZE = 30
 GLOBAL_PIXEL_SIZE_DEG = 0.0002777777777777
 
-CN_A_PATH = direct_data/CN_A_wwf_ph_baseline_chirps_single.tif
-CN_B_PATH = direct_data/CN_B_wwf_ph_baseline_chirps_single.tif
-CN_C_PATH = direct_data/CN_C_wwf_ph_baseline_chirps_single.tif
-CN_D_PATH = direct_data/CN_D_wwf_ph_baseline_chirps_single.tif
+; CN_A_PATH = direct_data/CN_A_wwf_ph_baseline_chirps_single.tif
+; CN_B_PATH = direct_data/CN_B_wwf_ph_baseline_chirps_single.tif
+; CN_C_PATH = direct_data/CN_C_wwf_ph_baseline_chirps_single.tif
+; CN_D_PATH = direct_data/CN_D_wwf_ph_baseline_chirps_single.tif
+
+CN_A_PATH = D:\repositories\wwf-sipa\data\parameter_rasters\reclassified_ph_baseline_lulc_md5_7f29da_biophysical_template_PH_revised_CN_A.tif
+CN_B_PATH = D:\repositories\wwf-sipa\data\parameter_rasters\reclassified_ph_baseline_lulc_md5_7f29da_biophysical_template_PH_revised_CN_B.tif
+CN_C_PATH = D:\repositories\wwf-sipa\data\parameter_rasters\reclassified_ph_baseline_lulc_md5_7f29da_biophysical_template_PH_revised_CN_C.tif
+CN_D_PATH = D:\repositories\wwf-sipa\data\parameter_rasters\reclassified_ph_baseline_lulc_md5_7f29da_biophysical_template_PH_revised_CN_D.tif
 LULC_RASTER_PATH = D:\repositories\wwf-sipa\data\landcover_rasters\ph_baseline_lulc_md5_7f29da.tif
 BIOPHYSICAL_TABLE_PATH = D:\repositories\wwf-sipa\data\biophysical_template_PH_revised.csv
 LUCODE_FIELD = lulc_id
