pathing up 2050 scenarios

--- a/wwf_ph_infra_current_impact_2050_rcp45_10.ini
+++ b/wwf_ph_infra_current_impact_2050_rcp45_10.ini
@@ -1,6 +1,6 @@
-[wwf_ph_infra_future_2050_rcp45_90]
+[wwf_ph_infra_current_impact_2050_rcp45_10]
 ; N_WORKERS=1
-PRECIP_DIR = D:\local_global_swy_data\precip_2010-2018_average
+PRECIP_DIR = D:\local_global_swy_data\precip_2050_rcp45_10
 ET0_DIR = D:\local_global_swy_data\Global-ET0_v3_monthly_tifs
 SOIL_HYDROLOGIC_GROUP_RASTER_PATH = D:\local_global_swy_data\HYSOGs250m_md5_517bfa.tif
 SOIL_HYDROLOGIC_MAP = {
@@ -13,17 +13,17 @@ SOIL_HYDROLOGIC_MAP = {
     13: 'C',
     14: 'D'}
 
-USER_DEFINED_RAIN_EVENTS_PATH = ./ph_box_CHIRPS_avg_precip_events_2000_2010_*_1.0.tif
+USER_DEFINED_RAIN_EVENTS_PATH = D:\local_global_swy_data\n_events_2050_rcp45_10\*.tif
 MONTHLY_ALPHA = 0.018
 THRESHOLD_FLOW_ACCUMULATION = 1000
 ;WATERSHED_SUBSET = ('as_bas_15s_beta', 390065)
 TARGET_PIXEL_SIZE = 30
 GLOBAL_PIXEL_SIZE_DEG = 0.0002777777777777
 
-CN_A_PATH = D:\repositories\wwf-sipa\reclassified_ph_baseline_infra_future_cont_CN_A.tif
-CN_B_PATH = D:\repositories\wwf-sipa\reclassified_ph_baseline_infra_future_cont_CN_B.tif
-CN_C_PATH = D:\repositories\wwf-sipa\reclassified_ph_baseline_infra_future_cont_CN_C.tif
-CN_D_PATH = D:\repositories\wwf-sipa\reclassified_ph_baseline_infra_future_cont_CN_D.tif
+CN_A_PATH = D:\repositories\wwf-sipa\reclassified_ph_baseline_infra_current_cont_CN_A.tif
+CN_B_PATH = D:\repositories\wwf-sipa\reclassified_ph_baseline_infra_current_cont_CN_B.tif
+CN_C_PATH = D:\repositories\wwf-sipa\reclassified_ph_baseline_infra_current_cont_CN_C.tif
+CN_D_PATH = D:\repositories\wwf-sipa\reclassified_ph_baseline_infra_current_cont_CN_D.tif
 LULC_RASTER_PATH = D:\repositories\wwf-sipa\data\landcover_rasters\ph_baseline_lulc_md5_7f29da.tif
 BIOPHYSICAL_TABLE_PATH = D:\repositories\wwf-sipa\data\biophysical_template_PH_revised.csv
 LUCODE_FIELD = lulc_id
