--- a/wwf_ph_infra_future_2050_rcp45_90.ini
+++ b/wwf_ph_infra_future_2050_rcp45_90.ini
@@ -1,6 +1,6 @@
 [wwf_ph_infra_future_2050_rcp45_90]
 ; N_WORKERS=1
-PRECIP_DIR = D:\local_global_swy_data\precip_2010-2018_average
+PRECIP_DIR = D:\local_global_swy_data\precip_2050_rcp45_90
 ET0_DIR = D:\local_global_swy_data\Global-ET0_v3_monthly_tifs
 SOIL_HYDROLOGIC_GROUP_RASTER_PATH = D:\local_global_swy_data\HYSOGs250m_md5_517bfa.tif
 SOIL_HYDROLOGIC_MAP = {
@@ -13,7 +13,7 @@ SOIL_HYDROLOGIC_MAP = {
     13: 'C',
     14: 'D'}
 
-USER_DEFINED_RAIN_EVENTS_PATH = ./ph_box_CHIRPS_avg_precip_events_2000_2010_*_1.0.tif
+USER_DEFINED_RAIN_EVENTS_PATH = D:\local_global_swy_data\n_events_2050_rcp45_90\*.tif
 MONTHLY_ALPHA = 0.018
 THRESHOLD_FLOW_ACCUMULATION = 1000
 ;WATERSHED_SUBSET = ('as_bas_15s_beta', 390065)
