--- a/wwf_ph_baseline_2050_rcp45_10.ini
+++ b/wwf_ph_baseline_2050_rcp45_10.ini
@@ -18,7 +18,7 @@ SOIL_HYDROLOGIC_MAP = {
 USER_DEFINED_RAIN_EVENTS_PATH = D:\local_global_swy_data\n_events_2050_rcp45_10\*.tif
 MONTHLY_ALPHA = 0.018
 THRESHOLD_FLOW_ACCUMULATION = 1000
-;WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', (392252, 390065))
+;WATERSHED_SUBSET = ('as_bas_15s_beta', 392252)
 BIOPHYSICAL_TABLE_PATH = ./base_data/biophysical_template_PH.csv
 LUCODE_FIELD = lulc_id
 TARGET_PIXEL_SIZE = 30
