refactor to use the year format

--- a/wwf_IDN_baseline_chirps_all_touched.ini
+++ b/wwf_IDN_baseline_chirps_all_touched.ini
@@ -14,7 +14,7 @@ SOIL_HYDROLOGIC_MAP = {
     13: 'C',
     14: 'D'}
 
-USER_DEFINED_RAIN_EVENTS_PATH = ./ind_aoi_CHIRPS_avg_precip_events_2000_2011_*_1.0.tif
+USER_DEFINED_RAIN_EVENTS_PATH = ./ind_aoi_CHIRPS_avg_precip_events_2000_2011_{month}_1.0.tif
 MONTHLY_ALPHA = 0.018
 THRESHOLD_FLOW_ACCUMULATION = 100000
 ;WATERSHED_SUBSET = ('as_bas_15s_beta', 'BASIN_ID', (392252, 390065))
