--- a/wwf_idn_infra_future_2050_rcp85_10.ini
+++ b/wwf_idn_infra_future_2050_rcp85_10.ini
@@ -13,7 +13,7 @@ SOIL_HYDROLOGIC_MAP = {
     13: 'C',
     14: 'D'}
 
-USER_DEFINED_RAIN_EVENTS_PATH = D:\local_global_swy_data\n_events_IDN_islands_to_clip_2050_rcp85_10\*.tif
+USER_DEFINED_RAIN_EVENTS_PATH = D:\local_global_swy_data\n_events_IDN_islands_to_clip_2050_rcp85_10\{month}.tif
 MONTHLY_ALPHA = 0.018
 THRESHOLD_FLOW_ACCUMULATION = 1000
 ;WATERSHED_SUBSET = ('as_bas_15s_beta', 557370)
