--- a/wwf_ph_baseline_chirps.ini
+++ b/wwf_ph_baseline_chirps.ini
@@ -14,7 +14,7 @@ SOIL_HYDROLOGIC_MAP = {
     13: 'C',
     14: 'D'}
 
-USER_DEFINED_RAIN_EVENTS_PATH = ./ph_box_CHIRPS_avg_precip_events_2000_2011_*_1.0.tif
+USER_DEFINED_RAIN_EVENTS_PATH = ./ph_box_CHIRPS_avg_precip_events_2000_2011_{month}_1.0.tif
 MONTHLY_ALPHA = 0.018
 THRESHOLD_FLOW_ACCUMULATION = 1000
 BIOPHYSICAL_TABLE_PATH = D:\repositories\wwf-sipa\data\biophysical_template_PH.csv
