--- a/wwf_ph_baseline_contCN.ini
+++ b/wwf_ph_baseline_contCN.ini
@@ -13,7 +13,7 @@ SOIL_HYDROLOGIC_MAP = {
     13: 'C',
     14: 'D'}
 
-USER_DEFINED_RAIN_EVENTS_PATH = ./ph_box_CHIRPS_avg_precip_events_2000_2010_*_1.0.tif
+USER_DEFINED_RAIN_EVENTS_PATH = ./ph_box_CHIRPS_avg_precip_events_2000_2010_{month}_1.0.tif
 MONTHLY_ALPHA = 0.018
 THRESHOLD_FLOW_ACCUMULATION = 1000
 ; WATERSHED_SUBSET = ('as_bas_15s_beta', 292017)
