--- a/wwf_ph_infra_future_2050_rcp45_10.ini
+++ b/wwf_ph_infra_future_2050_rcp45_10.ini
@@ -13,7 +13,7 @@ SOIL_HYDROLOGIC_MAP = {
     13: 'C',
     14: 'D'}
 
-USER_DEFINED_RAIN_EVENTS_PATH = D:\local_global_swy_data\n_events_2050_rcp45_10\*.tif
+USER_DEFINED_RAIN_EVENTS_PATH = D:\local_global_swy_data\n_events_2050_rcp45_10\{month}.tif
 MONTHLY_ALPHA = 0.018
 THRESHOLD_FLOW_ACCUMULATION = 1000
 ;WATERSHED_SUBSET = ('as_bas_15s_beta', 390065)
